# ProtClaw

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
workers/science-python/: Makefile  package.json  pyproject.toml
workers/science-python/base/: Dockerfile.base
workers/science-python/common/: __init__.py  adapter_protocol.py  entrypoint.py
workers/science-python/tests/: __init__.py  test_adapter_protocol.py  test_adapters.py  test_data.py  test_entrypoint.py
workers/science-python/tools/: __init__.py
workers/science-python/tools/candidate_ops/: Dockerfile  SKILL.md  __init__.py  adapter.py  requirements.txt
workers/science-python/tools/developability/: Dockerfile  SKILL.md  __init__.py  adapter.py  requirements.txt
workers/science-python/tools/esmfold/: Dockerfile  SKILL.md  __init__.py  adapter.py  infrastructure.yaml  requirements.txt
workers/science-python/tools/esmfold/scripts/patches/: openfold-attention.sh  openfold-deepspeed.sh  openfold-install.sh  openfold-structure-module.sh  torch-six-shim.sh
workers/science-python/tools/experiment_package/: Dockerfile  SKILL.md  __init__.py  adapter.py  infrastructure.yaml  requirements.txt
workers/science-python/tools/proteinmpnn/: Dockerfile  SKILL.md  __init__.py  adapter.py  infrastructure.yaml  requirements.txt
workers/science-python/tools/rfdiffusion/: Dockerfile  SKILL.md  __init__.py  adapter.py  infrastructure.yaml  requirements.txt
workers/science-python/tools/structure_qc/: Dockerfile  SKILL.md  __init__.py  adapter.py  requirements.txt
(+64 files in other folders)
