[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "protclaw-workers"
version = "0.1.0"
description = "ProtClaw science execution plane - tool adapters for protein design"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "protclaw-contracts",
    "numpy>=1.24",
    "biopython>=1.81",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["protclaw_workers", "protclaw_contracts"]
